[tool.poetry]
name = "brickout"
version = "0.1.0"
description = ""
authors = ["Abaranasia <rankirlian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brickout = 'brickout.main:main'